--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,10 @@
+## [0.1.2]
+### Added
+- parametrize mongo connection
+
+### Fix
+- fix deployment error in deployed contract (debtEngine), apply patch for this version until new deploy (contracts) 
+
 ## [0.1.1]
 
 ### Added
