--- a/changelog.txt
+++ b/changelog.txt
@@ -1,5 +1,9 @@
 ## 2019.3.10
 ### Fix
+- Add maxiter param in numpy.rate function
+
+## 2019.3.10
+### Fix
 - change calculation interest_rate loan
 
 ## 2019.26.9
